<resources>
    <string name="app_name">MAD Application 1</string>
    <string name="login_h">Login</string>
    <string name="email_input">Email</string>
    <string name="email">Email</string>
    <string name="password_input">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_txt">login</string>
    <string name="login">login</string>
    <string name="or">OR</string>
    <string name="register_now">Register Now</string>
    <string name="welcome_h">Welcome</string>
    <string name="todo" />
    <string name="todo2" />
    <string name="todo3" />
    <string name="todo4" />
</resources>