<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg3">

    <TextView
        android:id="@+id/login_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/login_h"
        android:textColor="@color/white"
        android:textSize="44sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="170dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:width="300dp"
            android:autofillHints=""
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:width="300dp"
            android:autofillHints=""
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/password_input"
            android:inputType="text|numberPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:gravity="right"
            android:padding="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="400dp"
        android:orientation="vertical"
        >


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="270dp"
            android:padding="15dp"
            android:text="@string/login"
            android:textSize="17sp"
            android:textStyle="bold"
           android:layout_gravity="center"
        />

        <TextView
            android:id="@+id/or_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_width="160dp"
            android:layout_height="5dp"
            android:layout_gravity="left"
            android:background="@color/white"
            tools:ignore="RtlHardcoded" />

        <View
            android:id="@+id/view2"
            android:layout_width="160dp"
            android:layout_height="5dp"
            android:layout_gravity="right"
            android:background="@color/white"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/RegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/register_now"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
          android:layout_gravity="center"
            />

    </LinearLayout>


</RelativeLayout>